# Finance-Tracker

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.yml  finance-tracker-spec.md  pyproject.toml  soul.md
tests/: conftest.py  test_account_mapper.py  test_callbacks.py  test_card_rules.py  test_categorizer.py  test_charts.py  test_commands.py  test_dedup.py  test_exchange_rate.py  test_firefly_client.py  test_gmail_client.py  test_health.py  test_ibkr_flex.py  test_llm_email_parser.py  test_llm_query.py  test_openai_client.py  test_reversal_matcher.py  test_statement_parser.py  test_telegram_bot.py  test_transaction_processor.py  test_validator.py
worker/: Dockerfile  config.py  main.py  requirements.txt
worker/bot/: callbacks.py  charts.py  commands.py  llm_query.py  telegram_bot.py
worker/integrations/: exchange_rate.py  firefly_client.py  gmail_client.py  ibkr_flex.py  openai_client.py
worker/parsers/: llm_email_parser.py  statement_parser.py  validator.py
worker/services/: account_config.py  account_mapper.py  bill_reminders.py  card_rules.py  categorizer.py  reconciler.py  reversal_matcher.py  salary.py  transaction_processor.py
worker/utils/: dedup.py  firefly_time.py  time.py
