[project]
name = "finance-tracker-worker"
version = "0.1.0"
description = "Personal finance tracker worker service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-telegram-bot>=20.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "openai>=1.30.0",
    "httpx>=0.24.0",
    "pdfplumber>=0.9.0",
    "python-dateutil>=2.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["worker", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "ruff>=0.15.7",
]
